--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,4 +3,13 @@ assertj = "3.25.3"
 awaitility = "4.2.1"
 checkstyle = "10.15.0"
 commons-io = "2.16.1"
-jackson = "2.17.
+jackson = "2.17.1"
+junit = "5.10.2"
+okhttp = "4.12.0"
+publish-plugin = "2.0.0"
+slf4j = "2.0.13"
+
+[libraries]
+assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
+awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
+commons-io = { module = "commons-io:common
