--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,4 +12,7 @@ slf4j = "2.0.13"
 [libraries]
 assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
-commons-io = { module = "commons-io:common
+commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
+jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jackson" }
+junit-bom = { module = "org.junit:junit-bom", version.ref = "junit" }
+okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "
