--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,4 +15,8 @@ awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" 
 commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
 jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jackson" }
 junit-bom = { module = "org.junit:junit-bom", version.ref = "junit" }
-okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "
+okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
+slf4j-bom = { module = "org.slf4j:slf4j-bom", version.ref = "slf4j" }
+
+[plugins]
+publish-plugin = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish-plugin" }
